@@ -33,7 +33,9 @@ version 1.1-rc0 ..-..-2012
 . [FIX] Director: 
         exceptions raised in runloop didn't cause program to abort (issue #911)
         Only enable depth test when a depth buffer is present
-. [FIX] FileUtils: also search full bundle path          
+        fixed end method, complete shutdown of director and resources (issue #686) 
+. [FIX] FileUtils: also search full bundle path      
+. [FIX] Menu: CCMenuItemToggle, tags of children were modified by the component    
 . [FIX] Node: 
         onEnterTransitionDidFinish isn't called twice anymore, when node was added in onEnter
         touches still work when UIKit elements lay on top of cocos view 
